	term->tscale is a scaling factor between internal terminal coordinates
	and the output pixel coordinates. Intended to support external mousing.

	* term/cairo.trm term/post.trm term/svg.trm: Initialize term->tscale.

	* src/eval.c (update_gpval_variables update_plot_bounds):
	Export pixel coordinates of plot boundary as seen in output image.
	TERM_XMIN TERM_XMAX TERM_YMIN TERM_YMAX

2007-12-25  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc demo/hidden2.dem:
	Documentation and comments for 'set hidden3d {back|front}'.

2007-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot) src/graph3d.h 
	src/tables.c src/tables.h demo/hidden2.dem demo/html/Makefile
	src/hidden3d.c (set_hidden3doptions show_hidden3doptions
	                save_hidden3doptions reset_hidden3doptions):
	New option 'set hidden3d {front|back}'
	controls whether the hidden3d plot elements are drawn before or after
	other plot elements such as pm3d surface or image.

2007-12-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm:  #define PASTEL_PALETTE and associated comments to
	allow palette-based plots to use a partially saturated fill style.

2007-12-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Implement dashed lines. Extend color support to
	include TC_LT. Assign color and dash attributes to individual paths,
	rather than inheriting them from the style of the surrounding group
	environment. 

	* src/set.c (set_termoptions):  Allow set termoption {dashed|solid}.

	* src/term_api.h:  Add an explicit terminal flag TERM_CAN_DASH
	to indicate that the terminal can toggle between solid and dashed lines.

	* src/set.c (set_termoptions): Check flag before trying to call
	current terminal with either dashed or solid.

	* term/aquaterm.trm term/cairo.trm term/cgm.trm term/emf.trm
	term/fig.trm term/metapost.trm term/pdf.trm term/post.trm term/svg.trm
	term/tgif.trm term/x11.trm term/xlib.trm:  Add flag TERM_CAN_DASH
