@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.470 2007/12/25 18:02:52 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.471 2007/12/31 20:20:20 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -10152,14 +10152,14 @@ Ffigure_mapcontours
 3 variables
 ?commands show variables
 ?show variables
- The `show variables` command lists all user-defined variables and their
- values.
+ The `show variables` command lists the current value of user-defined and
+ internal variables. Gnuplot internally defines variables whose names begin
+ with GPVAL_, MOUSE_, FIT_, and TERM_.
 
  Syntax:
-       show variables {all}
-
- With the optional keyword "all", also the `gnuplot-defined variables` that
- begin with `GPVAL_` are listed.
+       show variables	   # show variables that do not begin with GPVAL_
+       show variables all  # show all variables including those beginning GPVAL_
+       show variables NAME # show only variables beginning with NAME
 
 3 version
 ?show version
